# streaming-api-core

./: .gitignore  Cargo.toml  docker-compose.yml  fix.patch  fix_extractor.patch  public_player.html  test_query.rs
api_client/: requests.http
db/: anime.db
migrations/: 0001_initial_schema.sql
src/: error.rs  lib.rs  main.rs  state.rs  telemetry.rs  worker.rs
src/features/: mod.rs
src/features/admin/: handlers.rs  mod.rs  repository.rs  seeder.rs
src/features/auth/: crypto.rs  error.rs  extractor.rs  handlers.rs  jwt.rs  mod.rs  repository.rs
src/features/catalog/: handlers.rs  mod.rs  repository.rs
src/features/stream/: handlers.rs  mod.rs  repository.rs
src/schema/: auth.rs  catalog.rs  mod.rs  tracking.rs
storage/stream/teste/: playlist.m3u8  playlist0.ts  playlist1.ts  playlist2.ts
