[package]
name = "AnimeNull"
version = "0.1.0"
edition = "2024"
authors = ["Miguel Siqueira Reis"]
default-run = "AnimeNull"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.50", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-gzip", "map-response-body"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.22", features = ["v4", "serde"] }
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
sea-query = { version = "0.32.7", features = ["derive"] }
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres", "with-json", "with-uuid", "with-chrono"] }
dotenvy = "0.15"
reqwest = { version = "0.13.2", features = ["json"] }
argon2 = "0.5.3"
password-hash = "0.6.0"
rand_core = "0.10.0"
jsonwebtoken = "10.3.0"
async-trait = "0.1.89"
axum-extra = { version = "0.12.5", features = ["typed-header"] }

[dev-dependencies]
dotenvy = "0.15" # Para carregar o DATABASE_URL nos testes
